--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -27,8 +27,7 @@ jobs:
         CIBW_BEFORE_BUILD: "pip install numpy"
         CIBW_BUILD: "cp36-* cp37-* cp38-*"
         CIBW_TEST_REQUIRES: "matplotlib seaborn"
-        CIBW_BEFORE_TEST: "cd tests"
-        CIBW_TEST_COMMAND: "python -m unittest"
+        CIBW_TEST_COMMAND: "cd tests && python -m unittest"
 
   windows:
     runs-on: windows-latest
@@ -50,8 +49,7 @@ jobs:
         CIBW_BEFORE_BUILD: "pip install numpy"
         CIBW_BUILD: "cp36-* cp37-* cp38-*"
         CIBW_TEST_REQUIRES: "matplotlib seaborn"
-        CIBW_BEFORE_TEST: "cd tests"
-        CIBW_TEST_COMMAND: "python -m unittest"
+        CIBW_TEST_COMMAND: "cd tests && python -m unittest"
 
   macos:
     runs-on: macos-latest
@@ -70,8 +68,7 @@ jobs:
         python -m cibuildwheel --output-dir wheelhouse
         ls wheelhouse/
       env:
-        CIBW_BEFORE_BUILD: "pip install numpy"
+        CIBW_BEFORE_BUILD: "CC=gcc-9 CXX=g++-9 pip install numpy"
         CIBW_BUILD: "cp36-* cp37-* cp38-*"
         CIBW_TEST_REQUIRES: "matplotlib seaborn"
-        CIBW_BEFORE_TEST: "CC=gcc-9 CXX=g++-9 cd tests"
-        CIBW_TEST_COMMAND: "python -m unittest"
+        CIBW_TEST_COMMAND: "cd tests && python -m unittest"
