--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -9,71 +9,114 @@ on:
 jobs:
   linux:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
+        include:
+          - python-version: 3.6
+            cibw-string: "cp36-*"
+          - python-version: 3.7
+            cibw-string: "cp37-*"
+          - python-version: 3.8
+            cibw-string: "cp38-*"
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.7 
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7 
-    - name: Install cibuildwheel 
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install cibuildwheel
+        pip install Cython matplotlib seaborn cibuildwheel twine
+        pip install -r requirements.txt
+        pip install .
+    - name: Test with unittest
+      run: |
+        cd tests
+        python -m unittest
+        cd .. 
     - name: Build with cibuildwheel
       run: |
         python -m cibuildwheel --output-dir wheelhouse
         ls wheelhouse/
       env:
         CIBW_BEFORE_BUILD: "pip install numpy"
-        CIBW_BUILD: "cp36-* cp37-* cp38-*"
-        CIBW_TEST_REQUIRES: "matplotlib seaborn pytest"
-        CIBW_BEFORE_TEST: "pip install {project}"
-        CIBW_TEST_COMMAND: "cd {project}/tests && pytest"
+        CIBW_BUILD: ${{ matrix.cibw-string }} 
 
   windows:
     runs-on: windows-latest
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
+        include:
+          - python-version: 3.6
+            cibw-string: "cp36-*"
+          - python-version: 3.7
+            cibw-string: "cp37-*"
+          - python-version: 3.8
+            cibw-string: "cp38-*"
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.7 
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7 
-    - name: Install cibuildwheel 
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install cibuildwheel
+        pip install Cython matplotlib seaborn cibuildwheel twine
+        pip install -r requirements.txt
+        pip install .
+    - name: Test with unittest
+      run: |
+        cd tests
+        python -m unittest
+        cd .. 
     - name: Build with cibuildwheel
       run: |
         python -m cibuildwheel --output-dir wheelhouse
         ls wheelhouse/
       env:
         CIBW_BEFORE_BUILD: "pip install numpy"
-        CIBW_BUILD: "cp36-* cp37-* cp38-*"
-        CIBW_TEST_REQUIRES: "matplotlib seaborn pytest"
-        CIBW_BEFORE_TEST: "pip install {project}"
-        CIBW_TEST_COMMAND: "cd {project}/tests && pytest"
+        CIBW_BUILD: ${{ matrix.cibw-string }} 
 
   macos:
     runs-on: macos-latest
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
+        include:
+          - python-version: 3.6
+            cibw-string: "cp36-*"
+          - python-version: 3.7
+            cibw-string: "cp37-*"
+          - python-version: 3.8
+            cibw-string: "cp38-*"
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.7 
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7 
-    - name: Install cibuildwheel 
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install cibuildwheel
+        pip install Cython matplotlib seaborn cibuildwheel twine
+        pip install -r requirements.txt
+        CC=gcc-9 CXX=g++-9 pip install .
+    - name: Test with unittest
+      run: |
+        cd tests
+        python -m unittest
+        cd .. 
     - name: Build with cibuildwheel
       run: |
         python -m cibuildwheel --output-dir wheelhouse
         ls wheelhouse/
       env:
-        CIBW_BEFORE_BUILD: "pip install numpy && brew install libomp"
-        CIBW_BUILD: "cp36-* cp37-* cp38-*"
-        CIBW_TEST_REQUIRES: "matplotlib seaborn pytest"
-        CIBW_BEFORE_TEST: "pip install {project}"
-        CIBW_TEST_COMMAND: "cd {project}/tests && pytest"
-        CC: gcc-8
-        CXX: g++-8
+        CIBW_BEFORE_BUILD: "pip install numpy"
+        CIBW_BUILD: ${{ matrix.cibw-string }} 
+        CIBW_REPAIR_WHEEL_COMMAND: "delocate-listdeps {wheel} && delocate-wheel -w {dest_dir} {wheel}"
+        CC: gcc-9
+        CXX: g++-9
