- PyPI updated version - fixed github-actions branch bug - fixed requirements.txt and doc/requirements.txt

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ main, stable ]
+    branches: [ master, stable ]
   pull_request:
-    branches: [ main, stable ]
+    branches: [ master, stable ]
 
 jobs:
   linux:
