--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,7 +1,9 @@
-scipy>=1.4.1
 fastmat>=0.1.2.post1
 h5py>=2.10.0
-scikit-learn>=0.22.1
-seaborn>=0.9.0
-matplotlib>=3.0.0
-sphinx-gallery>=0.5.0
+matplotlib>=3.2.1
+numpy>=1.18.2
+scikit-learn>=0.22.2.post1
+scipy>=1.4.1
+seaborn>=0.10.0
+sphinx>=2.4.4
+sphinx-gallery>=0.6.0
