--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-scipy>=1.0.0
-numpy>=1.16.0
 fastmat>=0.1.2.post1
-h5py>=2.9.0
-scikit-learn>=0.19.0
-seaborn>=0.9.0
-matplotlib>=3.0.3
+h5py>=2.10.0
+matplotlib>=3.2.1
+numpy>=1.18.2
+scikit-learn>=0.22.2.post1
+scipy>=1.4.1
+seaborn>=0.10.0
