--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,9 @@ jobs:
       if: "contains(github.event.head_commit.message, 'PyPI')"
       run: |
         python -m twine upload wheelhouse/*.whl
+      env:
+        TWINE_PASSWORD: {{ secrets.twine_password }}
+        TWINE_USERNAME: {{ secrets.twine_username }}
 
   windows:
     runs-on: windows-latest
@@ -88,6 +91,9 @@ jobs:
       if: "contains(github.event.head_commit.message, 'PyPI')"
       run: |
         python -m twine upload wheelhouse/*.whl
+      env:
+        TWINE_PASSWORD: {{ secrets.twine_password }}
+        TWINE_USERNAME: {{ secrets.twine_username }}
 
   macos:
     runs-on: macos-latest
@@ -132,3 +138,6 @@ jobs:
       if: "contains(github.event.head_commit.message, 'PyPI')"
       run: |
         python -m twine upload wheelhouse/*.whl
+      env:
+        TWINE_PASSWORD: {{ secrets.twine_password }}
+        TWINE_USERNAME: {{ secrets.twine_username }}
