--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -6,5 +6,5 @@ scikit-learn>=0.22.2.post1
 scipy>=1.4.1
 seaborn>=0.10.0
 sphinx>=2.4.4
-sphinx-gallery>=0.5.0
+sphinx-gallery==0.5.0
 Pillow>=7.0.0
