--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
+scipy>=1.8
+numpy>=1.22.2
 fastmat>=0.1.2.post1
-h5py>=2.10.0
-matplotlib>=3.2.1
-numpy>=1.18.2
-scikit-learn>=0.22.2.post1
-scipy>=1.4.1
-seaborn>=0.10.0
+scikit-learn>=1.0.2
+h5py>=3.6.0
+matplotlib>=3.5.1
+seaborn>=0.11.2
