--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8]
+        python-version: [3.8, 3.9, 3.10]
         include:
           - python-version: 3.8
             cibw-string: "cp38-*"
+          - python-version: 3.9
+            cibw-string: "cp39-*"
+          - python-version: 3.10
+            cibw-string: "cp310-*"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -38,7 +42,8 @@ jobs:
         ls wheelhouse/
       env:
         CIBW_BEFORE_BUILD: "pip install numpy"
-        CIBW_BUILD: ${{ matrix.cibw-string }} 
+        CIBW_BUILD: ${{ matrix.cibw-string }}
+        CIBW_SKIP: "*-musllinux_*"
     - name: Upload with twine
       if: "contains(github.event.head_commit.message, 'PyPI')"
       run: |
@@ -51,10 +56,14 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: [3.8]
+        python-version: [3.8, 3.9, 3.10]
         include:
           - python-version: 3.8
             cibw-string: "cp38-*"
+          - python-version: 3.9
+            cibw-string: "cp39-*"
+          - python-version: 3.10
+            cibw-string: "cp310-*"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -91,10 +100,14 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: [3.8]
+        python-version: [3.8, 3.9, 3.10]
         include:
           - python-version: 3.8
             cibw-string: "cp38-*"
+          - python-version: 3.9
+            cibw-string: "cp39-*"
+          - python-version: 3.10
+            cibw-string: "cp310-*"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
