--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: [3.8, 3.9, 3.10]
         include:
           - python-version: 3.8
             cibw-string: "cp38-*"
           - python-version: 3.9
             cibw-string: "cp39-*"
+          - python-version: 3.10
+            cibw-string: "cp310-*"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -39,6 +41,7 @@ jobs:
         python -m cibuildwheel --output-dir wheelhouse
         ls wheelhouse/
       env:
+        CIBW_MANYLINUX_X86_64_IMAGE: "manylinux2014"
         CIBW_BEFORE_BUILD: "pip install numpy"
         CIBW_BUILD: ${{ matrix.cibw-string }}
         CIBW_SKIP: "*-musllinux_*"
@@ -54,12 +57,14 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: [3.8, 3.9, 3.10]
         include:
           - python-version: 3.8
             cibw-string: "cp38-*"
           - python-version: 3.9
             cibw-string: "cp39-*"
+          - python-version: 3.10
+            cibw-string: "cp310-*"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -96,12 +101,14 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: [3.8, 3.9, 3.10]
         include:
           - python-version: 3.8
             cibw-string: "cp38-*"
           - python-version: 3.9
             cibw-string: "cp39-*"
+          - python-version: 3.10
+            cibw-string: "cp310-*"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
