--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,13 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9, 3.10]
+        python-version: ["3.8", "3.9", "3.10"]
         include:
-          - python-version: 3.8
+          - python-version: "3.8"
             cibw-string: "cp38-*"
-          - python-version: 3.9
+          - python-version: "3.9"
             cibw-string: "cp39-*"
-          - python-version: 3.10
+          - python-version: "3.10"
             cibw-string: "cp310-*"
     steps:
     - uses: actions/checkout@v2
@@ -57,13 +57,13 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9, 3.10]
+        python-version: ["3.8", "3.9", "3.10"]
         include:
-          - python-version: 3.8
+          - python-version: "3.8"
             cibw-string: "cp38-*"
-          - python-version: 3.9
+          - python-version: "3.9"
             cibw-string: "cp39-*"
-          - python-version: 3.10
+          - python-version: "3.10"
             cibw-string: "cp310-*"
     steps:
     - uses: actions/checkout@v2
@@ -101,13 +101,13 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9, 3.10]
+        python-version: ["3.8", "3.9", "3.10"]
         include:
-          - python-version: 3.8
+          - python-version: "3.8"
             cibw-string: "cp38-*"
-          - python-version: 3.9
+          - python-version: "3.9"
             cibw-string: "cp39-*"
-          - python-version: 3.10
+          - python-version: "3.10"
             cibw-string: "cp310-*"
     steps:
     - uses: actions/checkout@v2
