--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -101,14 +101,12 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9"]
         include:
           - python-version: "3.8"
             cibw-string: "cp38-*"
           - python-version: "3.9"
             cibw-string: "cp39-*"
-          - python-version: "3.10"
-            cibw-string: "cp310-*"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
