--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -5,3 +5,8 @@ scikit-learn>=1.2.0
 h5py>=3.7.0
 matplotlib>=3.6.3
 seaborn>=0.12.2
+Sphinx>=6.1.3
+sphinx-gallery>=0.11.1
+pydata-sphinx-theme>=0.12.0
+Pillow>=9.4.0
+ipython>=8.8.0
