--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,10 +1,10 @@
 version: 2
 
 sphinx:
-  configuration: doc/source/conf.py
+  configuration: doc/conf.py
 
 python:
-   version: 3.8
+   version: 3.10
    install:
       - requirements: doc/requirements.txt
       - method: pip
