--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11"]
         include:
+          - python-version: "3.9"
+            cibw-string: "cp39-*"
           - python-version: "3.10"
             cibw-string: "cp310-*"
           - python-version: "3.11"
@@ -53,8 +55,10 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11"]
         include:
+          - python-version: "3.9"
+            cibw-string: "cp39-*"
           - python-version: "3.10"
             cibw-string: "cp310-*"
           - python-version: "3.11"
@@ -94,8 +98,10 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11"]
         include:
+          - python-version: "3.9"
+            cibw-string: "cp39-*"
           - python-version: "3.10"
             cibw-string: "cp310-*"
           - python-version: "3.11"
@@ -124,7 +130,7 @@ jobs:
         ls wheelhouse/
       env:
         CIBW_BEFORE_BUILD: "pip install numpy"
-        CIBW_ARCHS_MACOS: x86_64 arm64
+        CIBW_ARCHS_MACOS: x86_64
         CIBW_BUILD: ${{ matrix.cibw-string }} 
         CIBW_REPAIR_WHEEL_COMMAND: "delocate-listdeps {wheel} && delocate-wheel -w {dest_dir} {wheel}"
         CC: gcc-13
