[MOD] - removed mpl-toolkit from setup.py and put matplotlib and seaborn back to requirements.txt and main.yml

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ numpy>=1.24.1
 fastmat>=0.2.post0
 scikit-learn>=1.2.0
 h5py>=3.7.0
+matplotlib>=3.6.3
+seaborn>=0.12.2
 tqdm>=4.64.1
 pandas>=1.5.2
 julia>=0.6.0
