--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install Cython cibuildwheel twine
+        pip install Cython matplotlib seaborn cibuildwheel twine
         pip install -r requirements.txt
         pip install .
     - name: Test with unittest
@@ -72,7 +72,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install Cython cibuildwheel twine
+        pip install Cython matplotlib seaborn cibuildwheel twine
         pip install -r requirements.txt
         pip install .
     - name: Test with unittest
@@ -116,7 +116,7 @@ jobs:
       run: |
         brew install gcc@13
         python -m pip install --upgrade pip
-        pip install Cython cibuildwheel twine
+        pip install Cython matplotlib seaborn cibuildwheel twine
         pip install -r requirements.txt
         CC=gcc-13 CXX=g++-13 pip install .
     - name: Test with unittest
