--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -132,10 +132,10 @@ jobs:
         CIBW_BEFORE_BUILD: "pip install numpy"
         CIBW_ARCHS_MACOS: x86_64
         CIBW_BUILD: ${{ matrix.cibw-string }} 
-        CIBW_REPAIR_WHEEL_COMMAND: "delocate-listdeps {wheel} && delocate-wheel -w {dest_dir} {wheel}"
+        CIBW_REPAIR_WHEEL_COMMAND: "delocate-listdeps {wheel} && delocate-wheel --require-archs=intel -w {dest_dir} {wheel}"
         CC: gcc-13
         CXX: g++-13
-        MACOSX_DEPLOYMENT_TARGET: "10.11"
+        MACOSX_DEPLOYMENT_TARGET: "10.13"
     - name: Upload with twine
       if: "contains(github.event.head_commit.message, 'PyPI')"
       run: |
