--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -135,7 +135,7 @@ jobs:
         CIBW_REPAIR_WHEEL_COMMAND: "delocate-listdeps {wheel} && delocate-wheel --require-archs=x86_64 -w {dest_dir} {wheel}"
         CC: gcc-13
         CXX: g++-13
-        MACOSX_DEPLOYMENT_TARGET: "10.13"
+        # MACOSX_DEPLOYMENT_TARGET: "10.13"
     - name: Upload with twine
       if: "contains(github.event.head_commit.message, 'PyPI')"
       run: |
