--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -132,7 +132,7 @@ jobs:
         CIBW_BEFORE_BUILD: "pip install numpy"
         CIBW_ARCHS_MACOS: x86_64
         CIBW_BUILD: ${{ matrix.cibw-string }} 
-        CIBW_REPAIR_WHEEL_COMMAND: "delocate-listdeps {wheel} && delocate-wheel --require-archs=x86_64 -w {dest_dir} {wheel}"
+        CIBW_REPAIR_WHEEL_COMMAND: "delocate-listdeps {wheel} && delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
         CC: gcc-13
         CXX: g++-13
         # MACOSX_DEPLOYMENT_TARGET: "10.13"
