[MOD] - set MACOSX_DEPLOYMENT_TARGET before install gcc13

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,7 +114,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        brew install gcc@13
+        MACOSX_DEPLOYMENT_TARGET=10.13 brew install gcc@13
         python -m pip install --upgrade pip
         pip install Cython matplotlib seaborn cibuildwheel twine
         pip install -r requirements.txt
@@ -130,12 +130,12 @@ jobs:
         ls wheelhouse/
       env:
         CIBW_BEFORE_BUILD: "pip install numpy"
-        # CIBW_ARCHS_MACOS: x86_64
+        CIBW_ARCHS_MACOS: x86_64
         CIBW_BUILD: ${{ matrix.cibw-string }} 
         CIBW_REPAIR_WHEEL_COMMAND: "delocate-listdeps {wheel} && delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
         CC: gcc-13
         CXX: g++-13
-        # MACOSX_DEPLOYMENT_TARGET: "10.13"
+        MACOSX_DEPLOYMENT_TARGET: "10.13"
     - name: Upload with twine
       if: "contains(github.event.head_commit.message, 'PyPI')"
       run: |
