--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
         include:
           - python-version: "3.9"
             cibw-string: "cp39-*"
@@ -18,6 +18,8 @@ jobs:
             cibw-string: "cp310-*"
           - python-version: "3.11"
             cibw-string: "cp311-*"
+          - python-version: "3.12"
+            cibw-string: "cp312-*"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -27,13 +29,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install Cython matplotlib seaborn cibuildwheel twine
+        pip install Cython cibuildwheel twine
         pip install -r requirements.txt
         pip install .
     - name: Test with unittest
       run: |
         cd tests
-        # python -m unittest
+        python -m unittest
         cd .. 
     - name: Build with cibuildwheel
       run: |
@@ -55,7 +57,7 @@ jobs:
     runs-on: windows-2019
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
         include:
           - python-version: "3.9"
             cibw-string: "cp39-*"
@@ -63,6 +65,8 @@ jobs:
             cibw-string: "cp310-*"
           - python-version: "3.11"
             cibw-string: "cp311-*"
+          - python-version: "3.12"
+            cibw-string: "cp312-*"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -72,13 +76,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install Cython matplotlib seaborn cibuildwheel twine
+        pip install Cython cibuildwheel twine
         pip install -r requirements.txt
         pip install .
     - name: Test with unittest
       run: |
         cd tests
-        # python -m unittest
+        python -m unittest
         cd .. 
     - name: Build with cibuildwheel
       run: |
@@ -94,52 +98,52 @@ jobs:
       env:
         TWINE_PASSWORD: ${{ secrets.twine_api_key }}
         TWINE_USERNAME: __token__
-  macos:
-    runs-on: macos-11
-    strategy:
-      matrix:
-        python-version: ["3.9", "3.10", "3.11"]
-        include:
-          - python-version: "3.9"
-            cibw-string: "cp39-*"
-          - python-version: "3.10"
-            cibw-string: "cp310-*"
-          - python-version: "3.11"
-            cibw-string: "cp311-*"
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        MACOSX_DEPLOYMENT_TARGET=10.11 brew install gcc@13
-        MACOSX_DEPLOYMENT_TARGET=10.11 python -m pip install --upgrade pip
-        MACOSX_DEPLOYMENT_TARGET=10.11 pip install Cython matplotlib seaborn cibuildwheel twine
-        MACOSX_DEPLOYMENT_TARGET=10.11 pip install -r requirements.txt
-        MACOSX_DEPLOYMENT_TARGET=10.11 CC=gcc-13 CXX=g++-13 pip install .
-    - name: Test with unittest
-      run: |
-        cd tests
-        # python -m unittest
-        cd .. 
-    - name: Build with cibuildwheel
-      run: |
-        python -m cibuildwheel --output-dir wheelhouse
-        ls wheelhouse/
-      env:
-        MACOSX_DEPLOYMENT_TARGET: "10.11"
-        CIBW_BEFORE_BUILD: "pip install numpy"
-        CIBW_ARCHS_MACOS: x86_64
-        CIBW_BUILD: ${{ matrix.cibw-string }} 
-        CIBW_REPAIR_WHEEL_COMMAND: "delocate-listdeps {wheel} && delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
-        CC: gcc-13
-        CXX: g++-13
-    - name: Upload with twine
-      if: "contains(github.event.head_commit.message, 'PyPI')"
-      run: |
-        python -m twine upload wheelhouse/*.whl
-      env:
-        TWINE_PASSWORD: ${{ secrets.twine_api_key }}
-        TWINE_USERNAME: __token__
+  # macos:
+  #   runs-on: macos-11
+  #   strategy:
+  #     matrix:
+  #       python-version: ["3.9", "3.10", "3.11"]
+  #       include:
+  #         - python-version: "3.9"
+  #           cibw-string: "cp39-*"
+  #         - python-version: "3.10"
+  #           cibw-string: "cp310-*"
+  #         - python-version: "3.11"
+  #           cibw-string: "cp311-*"
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Set up Python ${{ matrix.python-version }}
+  #     uses: actions/setup-python@v1
+  #     with:
+  #       python-version: ${{ matrix.python-version }}
+  #   - name: Install dependencies
+  #     run: |
+  #       MACOSX_DEPLOYMENT_TARGET=10.11 brew install gcc@13
+  #       MACOSX_DEPLOYMENT_TARGET=10.11 python -m pip install --upgrade pip
+  #       MACOSX_DEPLOYMENT_TARGET=10.11 pip install Cython matplotlib seaborn cibuildwheel twine
+  #       MACOSX_DEPLOYMENT_TARGET=10.11 pip install -r requirements.txt
+  #       MACOSX_DEPLOYMENT_TARGET=10.11 CC=gcc-13 CXX=g++-13 pip install .
+  #   - name: Test with unittest
+  #     run: |
+  #       cd tests
+  #       # python -m unittest
+  #       cd .. 
+  #   - name: Build with cibuildwheel
+  #     run: |
+  #       python -m cibuildwheel --output-dir wheelhouse
+  #       ls wheelhouse/
+  #     env:
+  #       MACOSX_DEPLOYMENT_TARGET: "10.11"
+  #       CIBW_BEFORE_BUILD: "pip install numpy"
+  #       CIBW_ARCHS_MACOS: x86_64
+  #       CIBW_BUILD: ${{ matrix.cibw-string }} 
+  #       CIBW_REPAIR_WHEEL_COMMAND: "delocate-listdeps {wheel} && delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
+  #       CC: gcc-13
+  #       CXX: g++-13
+  #   - name: Upload with twine
+  #     if: "contains(github.event.head_commit.message, 'PyPI')"
+  #     run: |
+  #       python -m twine upload wheelhouse/*.whl
+  #     env:
+  #       TWINE_PASSWORD: ${{ secrets.twine_api_key }}
+  #       TWINE_USERNAME: __token__
