--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        # python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.10"]
         include:
           - python-version: "3.9"
             cibw-string: "cp39-*"
@@ -57,7 +58,8 @@ jobs:
     runs-on: windows-2019
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        # python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.10"]
         include:
           - python-version: "3.9"
             cibw-string: "cp39-*"
@@ -98,36 +100,39 @@ jobs:
       env:
         TWINE_PASSWORD: ${{ secrets.twine_api_key }}
         TWINE_USERNAME: __token__
-  # macos:
-  #   runs-on: macos-11
-  #   strategy:
-  #     matrix:
-  #       python-version: ["3.9", "3.10", "3.11"]
-  #       include:
-  #         - python-version: "3.9"
-  #           cibw-string: "cp39-*"
-  #         - python-version: "3.10"
-  #           cibw-string: "cp310-*"
-  #         - python-version: "3.11"
-  #           cibw-string: "cp311-*"
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - name: Set up Python ${{ matrix.python-version }}
-  #     uses: actions/setup-python@v1
-  #     with:
-  #       python-version: ${{ matrix.python-version }}
-  #   - name: Install dependencies
-  #     run: |
-  #       MACOSX_DEPLOYMENT_TARGET=10.11 brew install gcc@13
-  #       MACOSX_DEPLOYMENT_TARGET=10.11 python -m pip install --upgrade pip
-  #       MACOSX_DEPLOYMENT_TARGET=10.11 pip install Cython matplotlib seaborn cibuildwheel twine
-  #       MACOSX_DEPLOYMENT_TARGET=10.11 pip install -r requirements.txt
-  #       MACOSX_DEPLOYMENT_TARGET=10.11 CC=gcc-13 CXX=g++-13 pip install .
-  #   - name: Test with unittest
-  #     run: |
-  #       cd tests
-  #       # python -m unittest
-  #       cd .. 
+  macos:
+    runs-on: macos-11
+    strategy:
+      matrix:
+        # python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.10"]
+        include:
+          - python-version: "3.9"
+            cibw-string: "cp39-*"
+          - python-version: "3.10"
+            cibw-string: "cp310-*"
+          - python-version: "3.11"
+            cibw-string: "cp311-*"
+          - python-version: "3.12"
+          cibw-string: "cp311-*"
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        brew install gcc@13
+        python -m pip install --upgrade pip
+        pip install Cython matplotlib seaborn cibuildwheel twine
+        pip install -r requirements.txt
+        CC=gcc-13 CXX=g++-13 pip install .
+    - name: Test with unittest
+      run: |
+        cd tests
+        # python -m unittest
+        cd .. 
   #   - name: Build with cibuildwheel
   #     run: |
   #       python -m cibuildwheel --output-dir wheelhouse
