--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,14 @@ jobs:
         # python-version: ["3.9", "3.10", "3.11", "3.12"]
         python-version: ["3.10"]
         include:
-          - python-version: "3.9"
-            cibw-string: "cp39-*"
+          # - python-version: "3.9"
+          #   cibw-string: "cp39-*"
           - python-version: "3.10"
             cibw-string: "cp310-*"
-          - python-version: "3.11"
-            cibw-string: "cp311-*"
-          - python-version: "3.12"
-            cibw-string: "cp312-*"
+          # - python-version: "3.11"
+          #   cibw-string: "cp311-*"
+          # - python-version: "3.12"
+          #   cibw-string: "cp312-*"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -61,14 +61,14 @@ jobs:
         # python-version: ["3.9", "3.10", "3.11", "3.12"]
         python-version: ["3.10"]
         include:
-          - python-version: "3.9"
-            cibw-string: "cp39-*"
+          # - python-version: "3.9"
+          #   cibw-string: "cp39-*"
           - python-version: "3.10"
             cibw-string: "cp310-*"
-          - python-version: "3.11"
-            cibw-string: "cp311-*"
-          - python-version: "3.12"
-            cibw-string: "cp312-*"
+          # - python-version: "3.11"
+          #   cibw-string: "cp311-*"
+          # - python-version: "3.12"
+          #   cibw-string: "cp312-*"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -107,14 +107,14 @@ jobs:
         # python-version: ["3.9", "3.10", "3.11", "3.12"]
         python-version: ["3.10"]
         include:
-          - python-version: "3.9"
-            cibw-string: "cp39-*"
+          # - python-version: "3.9"
+          #   cibw-string: "cp39-*"
           - python-version: "3.10"
             cibw-string: "cp310-*"
-          - python-version: "3.11"
-            cibw-string: "cp311-*"
-          - python-version: "3.12"
-            cibw-string: "cp311-*"
+          # - python-version: "3.11"
+          #   cibw-string: "cp311-*"
+          # - python-version: "3.12"
+          #   cibw-string: "cp312-*"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
