--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,17 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # python-version: ["3.9", "3.10", "3.11", "3.12"]
-        python-version: ["3.10"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
         include:
-          # - python-version: "3.9"
-          #   cibw-string: "cp39-*"
+          - python-version: "3.9"
+            cibw-string: "cp39-*"
           - python-version: "3.10"
             cibw-string: "cp310-*"
-          # - python-version: "3.11"
-          #   cibw-string: "cp311-*"
-          # - python-version: "3.12"
-          #   cibw-string: "cp312-*"
+          - python-version: "3.11"
+            cibw-string: "cp311-*"
+          - python-version: "3.12"
+            cibw-string: "cp312-*"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -58,17 +57,16 @@ jobs:
     runs-on: windows-2019
     strategy:
       matrix:
-        # python-version: ["3.9", "3.10", "3.11", "3.12"]
-        python-version: ["3.10"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
         include:
-          # - python-version: "3.9"
-          #   cibw-string: "cp39-*"
+          - python-version: "3.9"
+            cibw-string: "cp39-*"
           - python-version: "3.10"
             cibw-string: "cp310-*"
-          # - python-version: "3.11"
-          #   cibw-string: "cp311-*"
-          # - python-version: "3.12"
-          #   cibw-string: "cp312-*"
+          - python-version: "3.11"
+            cibw-string: "cp311-*"
+          - python-version: "3.12"
+            cibw-string: "cp312-*"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -104,17 +102,16 @@ jobs:
     runs-on: macos-11
     strategy:
       matrix:
-        # python-version: ["3.9", "3.10", "3.11", "3.12"]
-        python-version: ["3.10"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
         include:
-          # - python-version: "3.9"
-          #   cibw-string: "cp39-*"
+          - python-version: "3.9"
+            cibw-string: "cp39-*"
           - python-version: "3.10"
             cibw-string: "cp310-*"
-          # - python-version: "3.11"
-          #   cibw-string: "cp311-*"
-          # - python-version: "3.12"
-          #   cibw-string: "cp312-*"
+          - python-version: "3.11"
+            cibw-string: "cp311-*"
+          - python-version: "3.12"
+            cibw-string: "cp312-*"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
