--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -136,13 +136,13 @@ jobs:
         ls wheelhouse/
       env:
         # MACOSX_DEPLOYMENT_TARGET: "10.11"
-        # CIBW_BEFORE_BUILD: "pip install numpy"
+        CIBW_BEFORE_BUILD: "pip install numpy"
         # CIBW_ARCHS_MACOS: x86_64
         CIBW_BUILD: ${{ matrix.cibw-string }} 
-        # CIBW_REPAIR_WHEEL_COMMAND: "delocate-listdeps {wheel} && delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
-        CIBW_REPAIR_WHEEL_COMMAND: ""
-        # CC: gcc-13
-        # CXX: g++-13
+        CIBW_REPAIR_WHEEL_COMMAND: "delocate-listdeps {wheel} && delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
+        # CIBW_REPAIR_WHEEL_COMMAND: ""
+        CC: gcc-13
+        CXX: g++-13
     - name: Upload with twine
       if: "contains(github.event.head_commit.message, 'PyPI')"
       run: |
