--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -153,7 +153,7 @@ jobs:
     - name: Build on GitHub runner
       run: |
         CC=gcc-13 CXX=g++-13 python setup.py bdist_wheel
-        delocate-listdeps dist/*.whl && delocate-wheel --require-archs universal2 -w wheelhouse -v dist/*.whl
+        delocate-listdeps dist/*.whl && delocate-wheel --require-archs arm64 -w wheelhouse -v dist/*.whl
     - name: Upload with twine
       if: "contains(github.event.head_commit.message, 'PyPI')"
       run: |
