--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -146,7 +146,7 @@ jobs:
         CIBW_BEFORE_BUILD: "pip install numpy"
         # CIBW_ARCHS_MACOS: x86_64
         CIBW_BUILD: ${{ matrix.cibw-string }} 
-        CIBW_REPAIR_WHEEL_COMMAND: "delocate-listdeps {wheel} && delocate-wheel --require-archs {delocate_archs} --require-target-macos-version 10.14 -w {dest_dir} -v {wheel}"
+        CIBW_REPAIR_WHEEL_COMMAND: "MACOSX_DEPLOYMENT_TARGET=10.14 delocate-listdeps {wheel} && delocate-wheel --require-archs {delocate_archs} --require-target-macos-version 10.14 -w {dest_dir} -v {wheel}"
         CC: gcc-13
         CXX: g++-13
     - name: Upload with twine
