[MOD] -fix small typo

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -128,7 +128,7 @@ jobs:
     - name: Test with unittest
       run: |
         cd tests
-        # python -m unittest
+        python -m unittest
         cd .. 
     - name: Build with cibuildwheel
       run: |
